@@ -3,3 +3,4 @@ Fonts now support rendering text to a target texture, instead of just the render
 Added proper error handling in main.c
 Added a few macros for ansi escape sequences in ansi-esc-sequences.h
 Yet another fonts.c fix (this time it's the horizontal offset of glyphs being 0)
+Changed the way assets are loaded so that the 'main' executable may be invoked from anywhere in the filesystem
